// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge does not render when show prop is false 1`] = `
<div
  className="badgeWrapper"
>
  Child
  <div
    className="badge topRight"
    data-testid="badge"
  >
    <div
      className="indicator colorNotification"
      data-testid="indicator"
    />
  </div>
</div>
`;

exports[`Badge renders at different position 1`] = `
<div
  className="badgeWrapper"
>
  Child
  <div
    className="badge bottomLeft show"
    data-testid="badge"
  >
    <div
      className="indicator colorNotification"
      data-testid="indicator"
    />
  </div>
</div>
`;

exports[`Badge renders with Counter 1`] = `
<div
  className="badgeWrapper"
>
  Child
  <div
    className="badge topRight show"
    data-testid="badge"
  >
    <span
      aria-label=" 5"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="5"
        className="counter sizeLarge kindFill colorPrimary"
      >
        <span
          data-testid="counter"
          id="counter"
        >
          5
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`Badge renders with custom Indicator 1`] = `
<div
  className="badgeWrapper"
>
  Child
  <div
    className="badge topRight show"
    data-testid="badge"
  >
    <div
      className="indicator colorPrimary"
      data-testid="indicator"
    />
  </div>
</div>
`;

exports[`Badge renders with different children 1`] = `
<div
  className="badgeWrapper"
>
  Other Child
  <div
    className="badge topRight show"
    data-testid="badge"
  >
    <div
      className="indicator colorNotification"
      data-testid="indicator"
    />
  </div>
</div>
`;

exports[`Badge renders with gap and circular 1`] = `
<div
  className="badgeWrapper"
>
  Child
  <div
    className="badge topRight gap circular show"
    data-testid="badge"
  >
    <div
      className="indicator colorNotification"
      data-testid="indicator"
    />
  </div>
</div>
`;

exports[`Badge renders with no children and props 1`] = `
<div
  className="badgeWrapper"
>
  <div
    className="badge topRight show"
    data-testid="badge"
  >
    <div
      className="indicator colorNotification"
      data-testid="indicator"
    />
  </div>
</div>
`;
